# cpp_11_14_17_20_23

./: .gitignore  1.cpp  ABA_PROBLEM_EXPLAINED.md  ABA_PROBLEM_README.md  ABSEIL_CONTAINERS_GUIDE.md  AGENTS.md  CMakeLists.txt  CONTAINERS_BENCHMARK_README.md  CONTAINERS_QUICK_REFERENCE.txt  HKEX_OCG_ANALYSIS.md  LOCKFREE_QUEUES_COMPLETE_GUIDE.md  LOCKFREE_QUEUES_SUMMARY.md  LOCKFREE_QUICK_REFERENCE.txt  QUICKSTART.md  README.md  TRADING_PIPELINE_ARCHITECTURE.md  UltraLowLatencyOrderBook.java  Virtu_HR_20251028_1.cpp  Virtu_HR_20251028_3.cpp  Virtu_HR_20251028_5.cpp  aba_problem_demo.cpp  abseil_containers_comprehensive.cpp  atomic_memory_orderings_use_cases_examples.cpp  branch_prediction_modern_features.cpp  build.sh  compatible_atomic_test.cpp  compile_cpp20.sh  comprehensive_mm_strategies_pricing.cpp  concurrency_vs_parallelization_examples.cpp  cpp11_examples.cpp  cpp11_initialization_types.cpp  cpp14_17_20_23_initialization_features.cpp  cpp14_examples.cpp  cpp17_examples.cpp  cpp20_consteval_use_cases_examples.cpp  cpp20_constinit_use_cases_examples.cpp  cpp20_examples.cpp  cpp20_modules_use_cases_examples.cpp  cpp20_three_way_comparison_examples.cpp  cpp23_examples.cpp  (+28 more)
cplusplus/: README.md
cpp_11_14_17_20_23/: .gitignore  CMakeLists.txt  README.md  reorganize.sh
cpp_11_14_17_20_23/01_cpp_features/cpp11/: auto_use_cases.cpp  auto_vs_decltype.cpp  decltype_sizeof_noexcept_typeid_examples.cpp  lambda_expressions.cpp  lvalue_rvalue_references.cpp  range_based_for_loops.cpp
cpp_11_14_17_20_23/01_cpp_features/cpp17/: cpp17_parallel_algorithms_examples.cpp
cpp_11_14_17_20_23/01_cpp_features/cpp20/: cpp20_concepts_use_cases_examples.cpp  cpp20_ranges_use_cases_examples.cpp
cpp_11_14_17_20_23/01_cpp_features/cpp23/: cpp23_features_overview.cpp
cpp_11_14_17_20_23/01_cpp_features/general/: atomic_memory_orderings_use_cases_examples.cpp  constexpr_consteval_constinit_evolution.cpp  constexpr_evolution_and_comparison.cpp  cpp_attributes_use_cases.cpp  cpp_standards_features_overview.cpp  design_patterns.cpp  sfinae_use_cases_examples.cpp  static_polymorphism_techniques.cpp
cpp_11_14_17_20_23/02_ultra_low_latency/: telemetry_corvil_rdtsc.cpp
cpp_11_14_17_20_23/02_ultra_low_latency/containers/: FOLLY_CONTAINERS_GUIDE.md  abseil_benchmark  abseil_containers_comprehensive.cpp  folly_containers_comprehensive.cpp  stl_abseil_folly_containers_comparison.cpp
cpp_11_14_17_20_23/02_ultra_low_latency/core/: ULTRA_LOW_LATENCY_ANALYSIS.md  ULTRA_LOW_LATENCY_SUMMARY.md
cpp_11_14_17_20_23/02_ultra_low_latency/lockfree/: ABA_PROBLEM_VISUAL_GUIDE.txt  lockfree_shm_ring_buffers_ipc.cpp  ringbuffer_variants
cpp_11_14_17_20_23/02_ultra_low_latency/networking/: zero_copy_mechanisms_ultra_low_latency.cpp
cpp_11_14_17_20_23/03_trading_apps/: vwap_algo_engine.cpp
cpp_11_14_17_20_23/03_trading_apps/exchange_handlers/: EXCHANGE_PROTOCOLS_CONNECTIVITY.md
cpp_11_14_17_20_23/03_trading_apps/exchange_handlers/asx_ouch/: ouch_asx_order_handler.cpp  ouch_asx_order_handler.hpp
cpp_11_14_17_20_23/03_trading_apps/exchange_handlers/fix_protocol/: fix_engine.cpp
cpp_11_14_17_20_23/03_trading_apps/exchange_handlers/hkex_ocg/: HKEX_OCG_README.md  build.sh  hkex_ocg_example_application.cpp  hkex_ocg_order_handler.cpp
cpp_11_14_17_20_23/03_trading_apps/feed_handlers/: ull_multicontainer_ipc.hpp
cpp_11_14_17_20_23/03_trading_apps/market_making/: ETF_NEAR_TOUCH_FAR_TOUCH_PRICES.md  MARKET_MAKING_COMPLETE_GUIDE.md  etf_strategies  fx_pricestream.cpp  fx_pricestream_enhanced.cpp  mm_backtest_simple_test.cpp  ull_etf_index_strategies.cpp
cpp_11_14_17_20_23/03_trading_apps/orderbook/: README.md  ull_orderbook.cpp  ull_orderbook_test
cpp_11_14_17_20_23/03_trading_apps/position_management/: ull_position_tracker.cpp
cpp_11_14_17_20_23/03_trading_apps/risk_management/: ull_risk_manager.cpp
cpp_11_14_17_20_23/build_scripts/: run_benchmarks.sh
cpp_11_14_17_20_23/config/: ouch_config.json.in
(+138 files in other folders)
